consistent config flag names
